# SelectMiddleFace

./: CMakeLists.txt  README.md  README.txt
SelectMiddleFace_StaticLib/GlassesPoseEstimation_SelectFrames/: Glasses_PoseEstimation_SelectFrames.pro
SelectMiddleFace_StaticLib/poseInfoTxT/: video_5828767_1459472811178.txt  video_5868761_1459494282216.txt
SelectMiddleFace_StaticLib/src/: main.cpp  selectFrames.cpp  selectFrames.h
SelectMiddleFace_StaticLib/src/FaceAR/: FaceAR_main.cpp
SelectMiddleFace_Use/include/: selectFrames.h
src/: main.cpp  main.cpp~
